# xmz

./: Cargo.toml  Cross.toml  GEMINI.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  parser.rs  stats.rs  tui.rs  xml.rs
src/tui/: input.rs  mod.rs  state.rs  terminal.rs  ui.rs
