[package]
name = "xmz"
version = "0.1.0"
edition = "2024"

[lib]
name = "xmz"
path = "src/lib.rs"

[dependencies]
memchr = "2"
memmap2 = "0.9.4"
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.26.1", features = ["crossterm"] }
crossterm = "0.27.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
